--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,28 +13,27 @@
       <div class="footer-section links">
         <h3 class="quick">Quick Links</h3>
         <ul>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">Home</a></li>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">About Us</a></li>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">Our Team</a></li>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">Services</a></li>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">Gallery</a></li>
-          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="#">Blog</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-1.svg"><a href="#">Contact Us</a></li>
+          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="/">Home</a></li>
+          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="/about-us">About Us</a></li>
+          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="/services">Services</a></li>
+          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="/gallery">Gallery</a></li>
+          <li><img class="footer-icon" src="../../assets/footer-icon-1.svg"><a href="/blog">Blog</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-1.svg"><a href="/contact-us">Contact Us</a></li>
         </ul>
       </div>
   
       <div class="footer-section center-of-excellence">
         <h3 class="center">Center of Excellence</h3>
         <ul>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Obstetrics & Gynaecology</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Surgery + Gastrosurgery</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">General Physician</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Paediatric & NICU</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Pediatrician</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Orthopedic</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Pediatric Surgery</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">Dermatology</a></li>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="#">ENT</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/obsterics-and-gynecology">Obstetrics & Gynecologists</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/surgery">Surgery + Gastrosurgery</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/general-physician">General Physician</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/pediatrics">Paediatrics</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/nephrology">Nephrology</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/orthopedic">Orthopedic</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/neurology">Neurology</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/dermatology">Dermatology</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/ent">ENT</a></li>
         </ul>
       </div>
   
