--- a/src/app/contact-form/contact-form.component.css
+++ b/src/app/contact-form/contact-form.component.css
@@ -274,12 +274,12 @@ text-align: center;
   @media (max-width: 768px) {
     .contact-container {
       /* padding: 20px; */
-      top: -85px;
+      top: 44px;
         position: relative;
     }
     .contact-left {
       padding: 20px;
-      width: 100%;
+      width: 88%;
       
     }
     .contact-heading{
@@ -292,7 +292,7 @@ text-align: center;
       font-weight: 400px;
     }
     .contact-right{
-      width: 100%;
+      width: 94%;
     }
     .contact-left h2{
         font-size: 20px;
@@ -337,4 +337,14 @@ text-align: center;
       height: 250px;
     }
   }
-  
+  @media (max-width:480px){
+    .contact-left{
+      width: 88%;
+    }
+    .contact-right{
+      width: 88%;
+    }
+    .contact-container{
+      top: 0;
+    }
+  }
