--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
         <div class="heading">ABOUT AKSHA HOSPITAL</div>
         <div class="container_1_para">
           Aksha Hospital, a 50-bedded multi-specialty hospital located in
-          Jayanagar, Bengaluru. Founded by Dr. Bhoopal with the vision of
+          Jayanagar, Bengaluru. Founded by Dr. T S Bhoopal with the vision of
           providing compassionate, ethical, and affordable healthcare services.
           Our hospital is dedicated in offering world-class medical care across
           various specialties, including gastroenterology, obstetrics,
