--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -25,7 +25,7 @@
       <div class="footer-section center-of-excellence">
         <h3 class="center">Center of Excellence</h3>
         <ul>
-          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/obsterics-and-gynecology">Obstetrics & Gynecologists</a></li>
+          <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/obsterics-and-gynecology">Obstetrics & Gynaecology</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/surgery">Surgery + Gastrosurgery</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/general-physician">General Physician</a></li>
           <li><img class="footer-icon"src="../../assets/footer-icon-2.svg"><a href="/pediatrics">Paediatrics</a></li>
