--- a/src/app/urology/urology.component.html
+++ b/src/app/urology/urology.component.html
@@ -3,7 +3,7 @@
         <div class="speciality_contents">
             <div class="speciality_heading">Urology</div>
             <div class="para">Urologists diagnose and treat problems involving the male and female urinary tract and the male reproductive organs. Urologists work with a team of doctors trained in many areas to determine the most appropriate treatment for your individual needs.</div>
-            <div class="para">Aksha offers several surgical services and procedures, including but not limited to those listed below..</div>
+            <div class="para">Aksha offers several surgical services and procedures, including but not limited to those listed below:</div>
             <ul class="speciality_lists">
                 <li class="list_item">Benign Condition BPH, Kidney Infections</li>
                 <li class="list_item">Cancers Involving Kidney, Bladder, Prostate, and Testies.</li>
