--- a/src/app/general-physician/general-physician.component.css
+++ b/src/app/general-physician/general-physician.component.css
@@ -78,6 +78,7 @@
 
 .speciality_lists{
     margin-top: 20px;
+    margin-left: 20px;
 }
 
 /* container 2 */
@@ -97,7 +98,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-top: 100px;
+    margin-top: 14px;
 }
 
 .doc_1{
