--- a/src/app/radiology/radiology.component.css
+++ b/src/app/radiology/radiology.component.css
@@ -63,7 +63,8 @@
     font-style: normal;
     font-weight: 700;
     line-height: 26px; /* 130% */
-    margin-top: 20px
+    margin-top: 20px;
+    margin-bottom:20px;
 }
 
 .speciality_lists{
