Doctor details fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -75,7 +75,7 @@
     </p>
     <!-- Special Features -->
     <div class="special-features">
-      <h4>Aksha Hospitals Special Features</h4>
+      <h4>Aksha Hospital's Special Features</h4>
       <div class="list">
         <div>
           <ul>
