--- a/src/app/cardiology/cardiology.component.html
+++ b/src/app/cardiology/cardiology.component.html
@@ -17,7 +17,7 @@
 
     <!-- doctor details -->
 
-    <!-- <div class="team_heading">Meet Our Medical Specialists</div>
+    <div class="team_heading">Meet Our Medical Specialists</div>
     <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctors'
         image = {{doctor.image}}
@@ -28,5 +28,5 @@
         description = ""
         slug={{doctor.slug}}
         ></app-doctor-structure>
-    </div> -->
+    </div>
 </div>
