--- a/src/app/oncology/oncology.component.html
+++ b/src/app/oncology/oncology.component.html
@@ -4,5 +4,29 @@ heading="Oncology and Onco Surgery"
 para_1="The Department of Oncology has eminent specialists with training from the best institutions in the country. They follow internationally accepted, protocol-based practice with quality care."
 image="../../assets/specialiti/Oncology.png"
 ></app-specialities-design>
-<!-- <div class="team_heading">Meet Our Medical Specialists</div> -->
+ <!-- doctor details container -->
+
+ <div class="team_heading">Meet Our Medical Specialists</div>
+ <div class="doctor_details">
+     <app-doctor-structure *ngFor = 'let doctor of doctors'
+     image = {{doctor.image}}
+     name = "{{doctor.name}}" 
+     desgination = {{doctor.designation}}
+     qualification = {{doctor.qualification}}
+     about = {{doctor.about}}
+     description = ""
+     slug="{{doctor.slug}}"
+     ></app-doctor-structure>
+ </div>
+ <div class="doctor_details">
+    <app-doctor-structure *ngFor = 'let doctor of doctors2'
+    image = {{doctor.image}}
+    name = "{{doctor.name}}" 
+    desgination = {{doctor.designation}}
+    qualification = {{doctor.qualification}}
+    about = {{doctor.about}}
+    description = ""
+    slug="{{doctor.slug}}"
+    ></app-doctor-structure>
+</div>
 </div>
