--- a/src/app/orthopedic/orthopedic.component.html
+++ b/src/app/orthopedic/orthopedic.component.html
@@ -12,4 +12,15 @@
     slug={{doctor.slug}}
     ></app-doctor-structure>
 </div>
+<div class="doctor_details">
+    <app-doctor-structure *ngFor = 'let doctor of doctors2'
+    image = {{doctor.image}}
+    name = {{doctor.name}} 
+    desgination = {{doctor.designation}}
+    qualification = {{doctor.qualification}}
+    about = {{doctor.about}}
+    description = ""
+    slug={{doctor.slug}}
+    ></app-doctor-structure>
+</div>
 </div>
