--- a/src/app/urology/urology.component.html
+++ b/src/app/urology/urology.component.html
@@ -20,7 +20,7 @@
 
     <!-- doctor details -->
 
-    <!-- <div class="team_heading">Meet Our Medical Specialists</div>
+    <div class="team_heading">Meet Our Medical Specialists</div>
     <div class="doctor_details">
         <app-doctor-structure *ngFor = 'let doctor of doctors'
         image = {{doctor.image}}
@@ -31,6 +31,6 @@
         description = ""
         slug={{doctor.slug}}
         ></app-doctor-structure>
-    </div> -->
+    </div>
     
 </div>
