--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,7 @@
 .doctor_details{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     padding:0 0 10% 0;
     gap: 40px;
 }
