--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1052,6 +1052,7 @@ color: #000;
   font-family: Poppins;
   font-weight: bold;
   margin-bottom: 10px;
+  line-height: 29px;
 }
 
 .doctor-title {
