nabh container completed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -234,6 +234,10 @@
   </div>
 </div>
 
+<div class="nabh">
+  <app-nabh />
+</div>
+
 
 <div class="why-choose-us-container">
   <h1 class="title-1">Aksha Hospital Bengaluru</h1>
