--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,11 +2,17 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px;
-  /* margin-top: 18vh; */
   padding: 65px;
-  /* margin-bottom: 3rem; */
   padding-left: 6rem;
   background: #f0f8ff;
+}
+.heads{
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 /* Card container */
 .card-container {
@@ -322,7 +328,7 @@
 }
 .left-image-1 {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 .left-image-2{
   width: 468px;
@@ -1158,6 +1164,13 @@ color: #322875;
     gap: 20px;
     padding-left: 1rem;
   }
+  .heads{
+    font-size: 50px;
+    padding: 10px 0;
+  }
+  .caro-text-content{
+    height: auto;
+  }
   .card-container {
     width: 180px;
     height: 210px;
@@ -1320,7 +1333,7 @@ color: #322875;
       padding-left: 82px;
     }
     .caro-text-content{
-      width: 302px;
+      width: 430px;
     }
 
 }
@@ -1727,6 +1740,9 @@ color: #322875;
     justify-items: center;
     padding-right: 60px;
   }
+  .heads{
+    font-size: 40px;
+  }
 
   /* Styling the cards to achieve the 2-1-2 layout */
   .facilities-container > div:nth-child(1),
@@ -1961,6 +1977,9 @@ color: #322875;
     .caro-image-container{
       align-items: center;
       padding-left: 2rem;
+    }
+    .caro-text-content{
+      width: 100%;
     }
     .caro-text-content h1{
       font-size: 36px;
